--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <h1>Heading</h1>
-    <p>Paragraph</p>
+    <p class="sub-heading-color">Paragraph</p>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
