--- a/index.html
+++ b/index.html
@@ -185,12 +185,34 @@
 
     <!-- footer / contact section -->
     <!-- mt-auto added to push footer to bottom of the page -->
-    <footer class="mt-auto">
-        <div class="container">
+    <footer id="contact" class="mt-auto">
+        <div class="container section">
             <div class="row justify-content-center">
-                <div class="col-12">Contact section heading</div>
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact us!</h2>
+                </div>
                 <!-- Contact info -->
-                <div class="col-12 col-md-6 col-xl-4">Contact infor & socail links</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address> <i class="fa-solid fa-location-dot"></i>
+                        <strong>Boardwalk Games</strong><br>
+                        123 Boardwalk<br>
+                        Boardwalk City, 12345
+                    </address>
+                    <p> <i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                    <i class="fa-regular fa-paper-plane"></i> infor@boardwalk-games.co</p>
+                    <div class="social-links mt-4">
+                        <a href="https://wwww.instagram.co.uk" target="_blank"
+                        aria-label="Visit our Instagram page (open in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://wwww.facebook.com" target="_blank"
+                        aria-label="Visit our Facebook page (open in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-facebook"></i>
+                        <a href="https://x.com/?lang=en" target="_blank"
+                        aria-label="Visit our X feed (open in a new tab)" rel="noopener">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
+                </div>
                 <!-- Opening times -->
                 <div class="col-12 col-md-6 col-xl-4">Opening times</div>
             </div>
