--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                </div>
+            </div>
     </nav>
 
     <!-- Header with carousel -->
@@ -54,53 +54,54 @@
             <div class="col-12 col-xl-6 text-center text-xl-start">
                 <h1 class="display-3">Boardwalk Games</h1>
                 <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
-                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board
+                    games and
                     café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
-                    </div>
-                    <div class="col-12 col-xl-6">
-                        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="assests/images/game-library-carousel-1.webp" class="d-block w-100"
-                                        alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assests/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100"
-                                        alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assests/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100"
-                                        alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assests/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100"
-                                        alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assests/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100"
-                                        alt="A cup of steaming coffee on a wooden table, some playing cards, and a notebook">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="assests/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100"
-                                        alt="Students playing a card game at Boardwalk Games">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+            </div>
+            <div class="col-12 col-xl-6">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assests/images/game-library-carousel-1.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/boardwalk-games-carousel-image-2.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/boardwalk-games-carousel-image-3.webp" class="d-block w-100"
+                                alt="The inside of Boardwalk Games with bookshelves filled with boardgames, and wooden tables to play at">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/boardwalk-games-carousel-image-4.webp" class="d-block w-100"
+                                alt="The back-room at Boardwalk Games set up for a Dungeons and Dragons evening">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100"
+                                alt="A cup of steaming coffee on a wooden table, some playing cards, and a notebook">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assests/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100"
+                                alt="Students playing a card game at Boardwalk Games">
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-            </header>
+            </div>
+        </div>
+    </header>
     </header>
 
     <!-- Main element to hold all key sections of the homepage. Its not part of the grid structure -->
@@ -115,7 +116,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assests/images/services-1.webp" class="card-img-top"
-                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table" >
+                            alt="Boardwalk games cafe table by a window, stacks of boardgames can be seen on the table">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Play in our cafe</h3>
                             <p class="card-text">
@@ -166,7 +167,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="assests/images/services-4.webp" class="card-img-top"
-                            alt="A kids party being held at Boardwalk Games" >
+                            alt="A kids party being held at Boardwalk Games">
                         <div class="card-body">
                             <h3 class="card-title sub-heading-color">Kids parties</h3>
                             <p class="card-text">
@@ -194,30 +195,64 @@
                 <!-- Contact info -->
                 <div class="col-12 col-md-6 col-xl-4">
                     <h3 class="sub-heading-color">Contact info</h3>
-                    <address> <i class="fa-solid fa-location-dot"></i>
-                        <strong>Boardwalk Games</strong><br>
+                    <address>
+                        <strong><i class="fa-solid fa-location-dot"></i> Boardwalk Games</strong><br>
                         123 Boardwalk<br>
                         Boardwalk City, 12345
                     </address>
-                    <p> <i class="fa-solid fa-phone"></i> 012 345 6789<br>
-                    <i class="fa-regular fa-paper-plane"></i> infor@boardwalk-games.co</p>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                        <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co
+                    </p>
                     <div class="social-links mt-4">
-                        <a href="https://wwww.instagram.co.uk" target="_blank"
-                        aria-label="Visit our Instagram page (open in a new tab)" rel="noopener">
-                        <i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://wwww.facebook.com" target="_blank"
-                        aria-label="Visit our Facebook page (open in a new tab)" rel="noopener">
-                        <i class="fa-brands fa-facebook"></i>
-                        <a href="https://x.com/?lang=en" target="_blank"
-                        aria-label="Visit our X feed (open in a new tab)" rel="noopener">
-                        <i class="fa-brands fa-x-twitter"></i>
+                        <a href="https://www.instagram.com" target="_blank"
+                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"
+                            aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-square-facebook"></i></a>
+                        <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
+                            rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
+
                 <!-- Opening times -->
-                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Opening times</h3>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Day</th>
+                                <th scope="col">Open</th>
+                                <th scope="col">Close</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Mon</th>
+                                <td colspan="2">Closed</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Tue - Thur</th>
+                                <td>11am</td>
+                                <td>11pm</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Fri - Sat</th>
+                                <td>11am</td>
+                                <td>12am</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Sun</th>
+                                <td>12pm</td>
+                                <td>7pm</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </footer>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
