--- a/game-library.html
+++ b/game-library.html
@@ -41,10 +41,13 @@
                         <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="game-library.html">Games</a>
+                        <a class="nav-link active" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
+                    </li>
+                    <li class="nav-item"> 
+                        <a href="booking.html" class="btn btn-priamry ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
