--- a/game-library.html
+++ b/game-library.html
@@ -46,8 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a href="booking.html" class="btn btn-priamry ms-lg-3">Book now</a>
+                    <li class="nav-item">
+                        <a href="booking.html" class="btn btn-primary ms-lg-3" aria-current="page">Book now</a>
+                    </li>
                     </li>
                 </ul>
             </div>
