added join us section and reserves a game section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="index.html#events" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
@@ -47,7 +50,7 @@
                     <li class="nav-item">
                         <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book now</a>
                     </li>
-                    
+
                 </ul>
             </div>
     </nav>
@@ -63,7 +66,7 @@
                     café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
-                    <a href="booking.html" class="btn custom-button-outline ms-lg-3" aria-current="page">Book now</a>
+                <a href="booking.html" class="btn custom-button-outline ms-lg-3" aria-current="page">Book now</a>
             </div>
             <div class="col-12 col-xl-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -186,6 +189,66 @@
                         </div>
                     </div>
                 </div>
+        </section>
+
+        <section id="events" class="container section">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Join Our Events</h2>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <p>
+                        Whether you're delving into dungeons, reliving classic games, or competing in high-stakes
+                        tournaments,
+                        there's something for every gamer. Reservations are recommended to ensure your spot at the
+                        table.
+                        Student discounts are available, so bring your student ID and enjoy more gaming for less.
+                    </p>
+                    <p>Outside scheduled events, our shop remains open for regular play.
+                        Join us anytime to discover new games and meet fellow enthusiasts.
+                    </p>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <table class="table table-light table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Event</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Time</th>
+                                <th scope="col">Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Dungeons & Dragons</th>
+                                <td>Tuesdays</td>
+                                <td>8pmn - 11pm</td>
+                                <td>€25 for 6 sessions</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Retro Game Night</th>
+                                <td>Thursdays</td>
+                                <td>8pm - 11pm</td>
+                                <td>€5 per person*</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Tournaments</th>
+                                <td>Last Sunday of the month</td>
+                                <td>12pm - 7pm</td>
+                                <td>€10 per person</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p class="student-discount text-center">
+                        *Get 20% off with valid student ID
+                    </p>
+                </div>
+                <div class="col-12 text-center">
+                    <a href="booking.html" aria-label="Book now" class="btn custom-button-outline my-4">
+                        Book now
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
 
