--- a/booking.html
+++ b/booking.html
@@ -24,7 +24,7 @@
     ensure it always stays at the bottom of the page -->
 
 <body class="d-flex flex-column min-vh-100">
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="index.html"> <img src="assests/images/logo-sm-white.png"
                     alt="Boardwalk Games logo" class="logo"></a>
